fix header(width); popup; horizontal scroll

--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,10 +1,34 @@
 .header__logo {
   width: 142px;
-  padding-left: 27px;
+
 }
 
 @media (max-width: 768px) {
   .header__logo {
-    width: 103px
+    width: 103px;
+    padding-left: 27px;
   }
 }
+
+
+/*let popup = (bool) => {*/
+/*  let pop = document.querySelector('.popup')*/
+/*  if (bool == "add") {*/
+/*    pop.classList.add('popup_open')*/
+/*    } else if(bool == "rm") {*/
+/*        pop.classList.remove('popup_open')*/
+/*    } else {*/
+/*        console.log('error!')*/
+/*    }*/
+/*}*/
+
+
+/*let btn = [document.querySelector('.profile__edit-button'), document.querySelector('.popup__close-button')]*/
+/*let pop = document.querySelector('.popup')*/
+
+/*btn[0].onclick = function()  {*/
+/*  pop . classList . add('popup_open')*/
+/*}*/
+/*btn[1].onclick = function() {*/
+/*  pop.classList.remove('popup_open')*/
+/*}*/
